force-app/main/default/objects/Poulet__c/Poulet__c.object-meta.xml
<CustomObject>
    <label>Poulet</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Poulets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>