force-app/main/default/objects/Poulet__c/fields/Poids__c.field-meta.xml
<CustomField>
    <fullName>Poids__c</fullName>
    <label>Poids</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>