force-app/main/default/objects/Poulet__c/fields/poulailler__c.field-meta.xml
<CustomField>
    <fullName>poulailler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>poulailler</label>
    <referenceTo>Poulailler__c</referenceTo>
    <relationshipLabel>Poulets</relationshipLabel>
    <relationshipName>Poulets</relationshipName>
    <type>Lookup</type>
</CustomField>