force-app/main/default/objects/Poulet__c/fields/Prix_Unitaire__c.field-meta.xml
<CustomField>
    <fullName>Prix_Unitaire__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>Prix Unitaire</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>